--- a/coordinates_converter_dialog.ui
+++ b/coordinates_converter_dialog.ui
@@ -259,7 +259,7 @@
         <item row="0" column="1">
          <widget class="QGroupBox" name="groupBox_to">
           <property name="title">
-           <string>nach</string>
+           <string>von</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="0" column="1">
@@ -371,7 +371,7 @@
         <item row="0" column="3">
          <widget class="QGroupBox" name="groupBox_from">
           <property name="title">
-           <string>von</string>
+           <string>nach</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
            <item row="1" column="0">
@@ -457,7 +457,7 @@
      <property name="bottomMargin">
       <number>7</number>
      </property>
-     <item row="0" column="1">
+     <item row="0" column="2">
       <widget class="QStatusBar" name="statusBar">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -476,6 +476,13 @@
       <widget class="QPushButton" name="changeLanguageButton">
        <property name="text">
         <string>DE/EN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pushButton_help">
+       <property name="text">
+        <string>Hilfe</string>
        </property>
       </widget>
      </item>
